# flask_sample_api_on_docker

./: README.md  docker-compose.yml
server/: Dockerfile  main.py  pyproject.toml  uwsgi.ini
